Surveys: Fix editing after end date and duplicate reporting table - refs BT#22901

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -99,5 +99,6 @@
 @include meta.load-css("userreluser");
 @include meta.load-css('social');
 @include meta.load-css('skill');
+@include meta.load-css('survey');
 
 @include meta.load-css("libs/mediaelementjs/styles");
