Dropbox: Restore dropbox tool #6757 - refs #6757

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -908,6 +908,8 @@ img.course-tool__icon {
   }
 }
 
+.p-datatable .field {margin-bottom: 0;}
+
 .ghosting { opacity: .6; }
 .chosen   { outline: 2px solid #ddd; }
 .dragging { outline: 2px solid var(--support-5, #f60); }
