--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -100,5 +100,6 @@
 @include meta.load-css('social');
 @include meta.load-css('skill');
 @include meta.load-css('survey');
+@include meta.load-css('chat');
 
 @include meta.load-css("libs/mediaelementjs/styles");
