--- a/assets/css/scss/layout/_breadcrumb.scss
+++ b/assets/css/scss/layout/_breadcrumb.scss
@@ -1,5 +1,5 @@
 .app-breadcrumb {
-  @apply bg-white mb-3 text-tiny font-semibold leading-4 space-y-1;
+  @apply bg-white mb-3 md:px-6 px-4 text-tiny font-semibold leading-4 space-y-1;
 
   .p-breadcrumb-item-link {
     @apply text-tiny font-semibold;
