--- a/assets/css/scss/layout/_main_container.scss
+++ b/assets/css/scss/layout/_main_container.scss
@@ -1,5 +1,5 @@
 .app-main {
-  @apply flex flex-col min-h-screen pb-8 px-8 transition-[margin-left] duration-150;
+  @apply flex flex-col min-h-screen md:pb-8 md:px-8 transition-[margin-left] duration-150;
   padding-top: calc(4.5rem + 1rem + 1px);
 
   &:not(.app-main--no-sidebar) {
