--- a/public/main/template/default/blog/post.html.twig
+++ b/public/main/template/default/blog/post.html.twig
@@ -82,7 +82,7 @@
                                 </li>
                                 <li class="autor">
                                     <i class="fa fa-user" aria-hidden="true"></i>
-                                    <a href="{{ _p.web }}main/social/profile.php?u={{ post.id_author }}">{{ post.author }}</a>
+                                    <a href="{{ url('index') }}main/social/profile.php?u={{ post.id_author }}">{{ post.author }}</a>
                                 </li>
                                 <li class="score">
                                     <i class="fa fa-star" aria-hidden="true"></i> {{ post.score_ranking }}
