--- a/public/main/template/default/glossary/glossary_manual.js.html.twig
+++ b/public/main/template/default/glossary/glossary_manual.js.html.twig
@@ -1,4 +1,4 @@
-var ajaxRequestUrl = "{{ _p.web }}main/glossary/glossary_ajax_request.php?{{ _p.web_cid_query }}";
+var ajaxRequestUrl = "{{ url('index') }}main/glossary/glossary_ajax_request.php?{{ _p.web_cid_query }}";
 var imageSource = "{{ _p.web_main }}" + "inc/lib/javascript/indicator.gif";
 var indicatorImage ='<img src="' + imageSource + '" />';
 
