--- a/public/main/template/default/skill/badge.html.twig
+++ b/public/main/template/default/skill/badge.html.twig
@@ -32,7 +32,7 @@
                 <div class="block-content">
                     <div class="block-title">{{ 'Badges issuer details'|trans }}</div>
                     <p>{{ 'Name'|trans }} : {{ _s.institution }}</p>
-                    <p>URL: {{ _p.web }}</p>
+                    <p>URL: {{ url('index') }}</p>
                     <div class="block-title">{{ 'Backpack details'|trans }}</div>
                     <p>URL: {{ backpack }}</p>
                     <p>{{ 'The badges will be sent to this backpack'|trans }}</p>
