--- a/public/main/template/default/gradebook/certificate_report.html.twig
+++ b/public/main/template/default/gradebook/certificate_report.html.twig
@@ -78,7 +78,7 @@ $(function () {
                 <td>
                     {% for certificate in student.certificates %}
                         {% set hash = certificate.path_certificate|split('.')|first %}
-                        <a href="{{ _p.web }}certificates/{{ hash }}.html" class="btn btn--plain">
+                        <a href="{{ url('index') }}certificates/{{ hash }}.html" class="btn btn--plain">
                             <em class="fa fa-floppy-o"></em> {{ 'Certificate' | get_lang }}
                         </a>
                     {% endfor %}
