--- a/public/main/template/default/skill/skill_wheel_student.html.twig
+++ b/public/main/template/default/skill/skill_wheel_student.html.twig
@@ -210,7 +210,7 @@
                 <div class="row">
                     <div class="col-md-3 skill-options">
                         <p class="skill-home">
-                            <a class="btn btn-large btn-block btn--primary" href="{{ _p.web }}social">
+                            <a class="btn btn-large btn-block btn--primary" href="{{ url('index') }}social">
                                 <em class="mdi mdi-home"></em> {{ "Return "|trans }}
                             </a>
                         </p>
