--- a/public/main/template/default/social/home.html.twig
+++ b/public/main/template/default/social/home.html.twig
@@ -62,7 +62,7 @@
 
                                 {% if 'profile.allow_social_map_fields'|api_get_setting == 'true' %}
                                     <div class="geolocalization">
-                                        <a class="btn btn-maps" id="profile-tab" href="{{ _p.web }}main/social/map.php" >
+                                        <a class="btn btn-maps" id="profile-tab" href="{{ url('index') }}main/social/map.php" >
                                             {{ 'ObjectIcon::MAP_MARKER'|mdi_icon(32) }}
                                             {{ 'By geolocalization' | get_lang }}
                                         </a>
