--- a/public/plugin/GradingElectronic/view/grading.html.twig
+++ b/public/plugin/GradingElectronic/view/grading.html.twig
@@ -28,7 +28,7 @@
                 e.preventDefault();
 
                 var $self = $(this);
-                $.post('{{ _p.web_plugin }}GradingElectronic/generate.php', $self.serialize())
+                $.post('{{ url('index') }}plugin/GradingElectronic/generate.php', $self.serialize())
                 .done(function (response) {
                     $('#modal-grading-electronic-result').html(
                         response
