--- a/src/CoreBundle/Resources/views/Lti/gradebook.html.twig
+++ b/src/CoreBundle/Resources/views/Lti/gradebook.html.twig
@@ -12,7 +12,7 @@
                     var cat_id = $(this).val();
 
                     $.ajax({
-                        url: "{{ _p.web_ajax }}gradebook.ajax.php?a=get_gradebook_weight",
+                        url: "{{ url('web_ajax') }}gradebook.ajax.php?a=get_gradebook_weight",
                         data: "cat_id=" + cat_id,
                         success: function (return_value) {
                             if (return_value != 0) {
