--- a/src/CoreBundle/Resources/views/Mailer/Legacy/footer.html.twig
+++ b/src/CoreBundle/Resources/views/Mailer/Legacy/footer.html.twig
@@ -2,7 +2,7 @@
     <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
         <tr>
             <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                <a style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;" href="{{_p.web}}" target="_blank">
+                <a style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;" href="{{ url('index') }}" target="_blank">
                     {{ "PoweredByX" |trans | format(_s.software_name) }}
                 </a>&copy; {{ "now"|date("Y") }}
             </td>
