--- a/src/CoreBundle/Resources/views/LearnPath/impress.html.twig
+++ b/src/CoreBundle/Resources/views/LearnPath/impress.html.twig
@@ -22,5 +22,5 @@
         impress().init();
     });
 </script>
-<script type="text/javascript" src="{{_p.web_lib}}javascript/impress/impress.js"></script>
+<script type="text/javascript" src="{{url('index')}}main/inc/lib/javascript/impress/impress.js"></script>
 {% endautoescape %}
