--- a/src/CoreBundle/Resources/views/LearnPath/list.html.twig
+++ b/src/CoreBundle/Resources/views/LearnPath/list.html.twig
@@ -609,7 +609,7 @@
                     {{ 'I have finished the lessons, notify the teacher'|trans }}
                 </button>
             {% else %}
-                <a href="{{ web_self ~ "?" ~ course_url_params ~ "&action=send_notify_teacher" }}" class="btn btn--primary">
+                <a href="{{ app.request.requestUri ~ "?" ~ course_url_params ~ "&action=send_notify_teacher" }}" class="btn btn--primary">
                     {{ 'I have finished the lessons, notify the teacher'|trans }}
                 </a>
             {% endif %}
