--- a/src/CoreBundle/Resources/views/LearnPath/view.html.twig
+++ b/src/CoreBundle/Resources/views/LearnPath/view.html.twig
@@ -304,7 +304,7 @@
                     {
                       type: "script", id: "_fr1", src: "{{ jquery_web_path }}", deps: [
                         { type: "script", id: "_fr4", src: "{{ jquery_ui_js_web_path }}" },
-                        { type: "script", id: "_fr2", src: "{{ _p.web_lib }}javascript/jquery.highlight.js" },
+                        { type: "script", id: "_fr2", src: "{{ url('index') }}main/inc/lib/javascript/jquery.highlight.js" },
                             {{ fix_link }}
                       ]
                     },
@@ -321,7 +321,7 @@
                     {
                       type: "script", id: "_fr1", src: "{{ jquery_web_path }}", deps: [
                         { type: "script", id: "_fr4", src: "{{ jquery_ui_js_web_path }}" },
-                        { type: "script", id: "_fr2", src: "{{ _p.web_lib }}javascript/jquery.highlight.js" },
+                        { type: "script", id: "_fr2", src: "{{ url('index') }}main/inc/lib/javascript/jquery.highlight.js" },
                             {{ fix_link }}
                       ]
                     },
