Dropbox: Re-enable blogs tool - refs #6823

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -101,5 +101,6 @@
 @include meta.load-css('skill');
 @include meta.load-css('survey');
 @include meta.load-css('chat');
+@include meta.load-css('blog');
 
 @include meta.load-css("libs/mediaelementjs/styles");
