Internal: Convert User::getCompleteName() (from 1.11) to User::getFullName() (master) and sibling methods

--- a/src/CoreBundle/Resources/views/Session/about.html.twig
+++ b/src/CoreBundle/Resources/views/Session/about.html.twig
@@ -22,7 +22,7 @@
                         {% if show_tutor and session.generalCoach %}
                             <div class="session-tutor">
                                 <em class="fa fa-user"></em> {{ 'SessionGeneralCoach'|trans }}:
-                                <em>{{ session.generalCoach.getCompleteName() }}</em>
+                                <em>{{ session.generalCoach.getFullName() }}</em>
                             </div>
                         {% endif %}
                         {% if session.getShowDescription() %}
