Survey: add “Pending surveys” menu - refs #4316

--- a/public/main/template/default/survey/pending.html.twig
+++ b/public/main/template/default/survey/pending.html.twig
@@ -1,40 +1,39 @@
 <div class="media">
     <div class="media-left">
         <a href="#">
-            <img class="media-object" src="{{ user | illustration }}" alt="{{ user.completeName }}">
+            <img class="media-object" src="{{ user | illustration }}" alt="{{ user.fullName }}">
         </a>
     </div>
     <div class="media-body">
-        <h3 class="media-heading">{{ user.completeName }}</h3>
+        <h3 class="media-heading">{{ user.fullName }}</h3>
         <p>{{ user.username }}</p>
     </div>
 </div>
 <br>
 {% for survey in surveys %}
-    {% set course_code = survey.course ? survey.course.code : '' %}
-    {% set session_id = survey.session ? survey.session.id : 0 %}
-
     <div class="panel panel-default">
         <div class="panel-body">
             <div>
-                <a href="/main/survey/fillsurvey.php?'{{ { 'course': course_code, 'invitationcode': survey.invitation_code, 'cid': survey.course.id, 'sid': session_id}|url_encode }}">
+                <a href="{{ survey.link }}">
                     {{ survey.title }}
                 </a>
             </div>
             <ul class="list-inline">
                 {% if survey.course %}
                     <li>
-                        <span class="label" style="background-color: {{ survey.session ? '#00496D' : '#458B00' }}">
-                            {{ survey.course.title }}
-
-                            {% if survey.session %}
-                                ({{ survey.session.title }})
-                            {% endif %}
-                        </span>
+            <span class="label" style="background-color: {{ survey.session ? '#00496D' : '#458B00' }}">
+              {{ survey.course.title }}
+                {% if survey.session %}
+                    ({{ survey.session.name }})
+                {% endif %}
+            </span>
                     </li>
                 {% endif %}
                 <li>
-                    {{ 'From %s to %s'|get_lang|format(survey.avail_from|api_convert_and_format_date(2), survey.avail_till|api_convert_and_format_date(2)) }}
+                    {{ 'From %s to %s'|get_lang|format(
+                        survey.avail_from|api_convert_and_format_date(2),
+                        survey.avail_till|api_convert_and_format_date(2)
+                    ) }}
                 </li>
             </ul>
         </div>
