Course: Implement and enhance Course Backup/Restore

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -102,5 +102,6 @@
 @include meta.load-css('survey');
 @include meta.load-css('chat');
 @include meta.load-css('blog');
+@include meta.load-css('course_maintenance');
 
 @include meta.load-css("libs/mediaelementjs/styles");
